--- a/_posts/2025-05-01-mauiuijuly-25.md
+++ b/_posts/2025-05-01-mauiuijuly-25.md
@@ -51,39 +51,39 @@ These are just examples. If you think something is interesting, there's a good c
 
 ## .NET MAUI UI July Schedule
 
-| Date | Person                      | Content                                                                                                                                                                        |
-| ---- | --------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](/posts/batmobile-part-1/)                                                                                       |
-| 2    | Matt Goldman                | [Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge](/posts/batmobile-part-2)                                                                                                 |
-| 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3)                                                                                       |
-| 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)                                                                                             |
-| 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)                                                                                                   |
-| 6    | Ed Schimmel                 | [Scrolling Text Display](https://byte217.com/net-maui-scrolling-text-display/)                                                                                                 |
-| 7    | Ed Schimmel                 | [Custom Tab Control](https://byte217.com/net-maui-tab-control-with-underlinement/)                                                                                             |
-| 8    | François Raminosona         | [Sensors in .NET MAUI](https://blog.francois.raminosona.com/sensors-in-net-maui-mauiuijuly/)                                                                                   |
-| 9    | François Raminosona         | [Gyroscope Parallax](https://blog.francois.raminosona.com/sensor-based-parallax-in-net-maui-using-the-gyroscope-mauiuijuly/)                                                   |
-| 10   | Almir Vuk                   | TBC                                                                                                                                                                            |
-| 11   | Ali Raza                    | [Milestone Journey Tracker](https://mauiwithali.hashnode.dev/building-a-dynamic-milestone-journey-tracker-with-skiasharp-in-net-maui)                                          |
-| 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                                                                             |
-| 13   | Adolfo Marinucci            | [Introduction to Reactor Theme](https://github.com/adospace/reactor-theme/blob/main/net_maui_july2025_article.md)                                                              |
-| 14   | John Bijsterbosch           | [Creating your first .NET MAUI SkiaSharp Component](https://blog.johndotnet.nl/creating-your-very-first-net-maui-skiasharp-component-step-by-step/)                            |
-| 15   | Nick Alonge                 | [Introduction to Reusable Views and Controls ](https://dev.to/nick_alonge/reusable-views-in-net-maui-4n3c)                                                                     |
-| 16   | Sebastian Jensen            | [Building an Animated Countdown Control in .NET MAUI](https://medium.com/@tsjdevapps/building-an-animated-countdown-control-in-net-maui-0b1faff7ed76)                          |
-| 17   | Calin Ciurariu              | [Scrolling Label](https://medium.com/@clinciurariu/calin-ciurariu-c153c8ceb9dd)                                                                                                |
-| 18   | Farshad Momtaz              | TBC                                                                                                                                                                            |
-| 19   | Leomaris Reyes              | TBC                                                                                                                                                                            |
-| 20   | Vladislav Antonyuk          | [Turn any phone into an IP Camera in 30 minutes using .NET MAUI](https://vladislavantonyuk.github.io/articles/Turn-any-phone-into-an-IP-Camera-in-30-Minutes-using-.NET-MAUI/) |
-| 21   | Shaun Lawrence              | [Create a Wheel of Names clone](https://blog.bijington.com/2025/07/21/wheel-of-names.html)                                                                                     |
-| 22   | Héctor Uriel Pérez Rojas    | [Create Viral Videos with SORA in .NET MAUI](https://devs.school/create-viral-videos-with-sora-in-net-maui/)                                                                   |
-| 23   | David Nsai                  | [Building a pedometer fitness tracker](https://medium.com/@nsaidave/building-a-pedometer-fitness-tracker-using-net-maui-8723ad041c1d)                                          |
-| 24   | Luis Antonio Beltran Prieto | [Joystick Navigation in .NET MAUI](https://dev.to/icebeam7/joystick-navigation-ui-in-net-maui-5974)                                                                            |
-| 25   | Nick Kovalsky               | [Build Cross-Platform Games in .NET MAUI with DrawnUI](https://taublast.github.io/posts/Breakout/)                                                                             |
-| 26   | Johan Smarius               | [Exploring the Syncfusion .NET MAUI Toolkit](https://www.youtube.com/watch?v=T69XFmhjdzQ)                                                                                      |
-| 27   | Steven Thewissen            | [The Crosswind Experiment](https://thewissen.io/maui-ui-july-crosswind-experiment/)                                                                                            |
-| 28   | Gulam Ali H.                | [Coach Marks, but Beautiful in .NET MAUI](https://medium.com/@freakyali/coach-marks-but-beautiful-in-net-maui-7cd861dc1058)                                                    |
-| 29   | Ed Gomez                    | TBC                                                                                                                                                                            |
-| 30   | David Ortinau               | TBC                                                                                                                                                                            |
-| 31   | Roman Jasek                 | Managing Accessibility in .NET MAUI                                                                                                                                            |
+| Date | Person                      | Content                                                                                                                                                                                                   |
+| ---- | --------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1    | Matt Goldman                | [Holy MauiGraphics Batman! Part 1: Batmobile Throttle Control](/posts/batmobile-part-1/)                                                                                                                  |
+| 2    | Matt Goldman                | [Holy MauiGraphics Batman! Part 2: Batcave RPM Gauge](/posts/batmobile-part-2)                                                                                                                            |
+| 3    | Matt Goldman                | [Holy MauiGraphics Batman! Part 3: Clayface Level Trigonometry](/posts/batmobile-part-3)                                                                                                                  |
+| 4    | Matt Goldman                | [Replicating Outlook's 'Focused/Other' toggle in .NET MAUI](/posts/outlook-toggle)                                                                                                                        |
+| 5    | Ed Schimmel                 | [Managing Screen Sizes](https://byte217.com/net-maui-managing-screen-sizes/)                                                                                                                              |
+| 6    | Ed Schimmel                 | [Scrolling Text Display](https://byte217.com/net-maui-scrolling-text-display/)                                                                                                                            |
+| 7    | Ed Schimmel                 | [Custom Tab Control](https://byte217.com/net-maui-tab-control-with-underlinement/)                                                                                                                        |
+| 8    | François Raminosona         | [Sensors in .NET MAUI](https://blog.francois.raminosona.com/sensors-in-net-maui-mauiuijuly/)                                                                                                              |
+| 9    | François Raminosona         | [Gyroscope Parallax](https://blog.francois.raminosona.com/sensor-based-parallax-in-net-maui-using-the-gyroscope-mauiuijuly/)                                                                              |
+| 10   | Almir Vuk                   | TBC                                                                                                                                                                                                       |
+| 11   | Ali Raza                    | [Milestone Journey Tracker](https://mauiwithali.hashnode.dev/building-a-dynamic-milestone-journey-tracker-with-skiasharp-in-net-maui)                                                                     |
+| 12   | Matt Goldman                | [Beer-Driven Downloads & Microinteractions in .NET MAUI](/posts/bdd-app-downloads)                                                                                                                        |
+| 13   | Adolfo Marinucci            | [Introduction to Reactor Theme](https://github.com/adospace/reactor-theme/blob/main/net_maui_july2025_article.md)                                                                                         |
+| 14   | John Bijsterbosch           | [Creating your first .NET MAUI SkiaSharp Component](https://blog.johndotnet.nl/creating-your-very-first-net-maui-skiasharp-component-step-by-step/)                                                       |
+| 15   | Nick Alonge                 | [Introduction to Reusable Views and Controls ](https://dev.to/nick_alonge/reusable-views-in-net-maui-4n3c)                                                                                                |
+| 16   | Sebastian Jensen            | [Building an Animated Countdown Control in .NET MAUI](https://medium.com/@tsjdevapps/building-an-animated-countdown-control-in-net-maui-0b1faff7ed76)                                                     |
+| 17   | Calin Ciurariu              | [Scrolling Label](https://medium.com/@clinciurariu/calin-ciurariu-c153c8ceb9dd)                                                                                                                           |
+| 18   | Farshad Momtaz              | TBC                                                                                                                                                                                                       |
+| 19   | Leomaris Reyes              | TBC                                                                                                                                                                                                       |
+| 20   | Vladislav Antonyuk          | [Turn any phone into an IP Camera in 30 minutes using .NET MAUI](https://vladislavantonyuk.github.io/articles/Turn-any-phone-into-an-IP-Camera-in-30-Minutes-using-.NET-MAUI/)                            |
+| 21   | Shaun Lawrence              | [Create a Wheel of Names clone](https://blog.bijington.com/2025/07/21/wheel-of-names.html)                                                                                                                |
+| 22   | Héctor Uriel Pérez Rojas    | [Create Viral Videos with SORA in .NET MAUI](https://devs.school/create-viral-videos-with-sora-in-net-maui/)                                                                                              |
+| 23   | David Nsai                  | [Building a pedometer fitness tracker](https://medium.com/@nsaidave/building-a-pedometer-fitness-tracker-using-net-maui-8723ad041c1d)                                                                     |
+| 24   | Luis Antonio Beltran Prieto | [Joystick Navigation in .NET MAUI](https://dev.to/icebeam7/joystick-navigation-ui-in-net-maui-5974)                                                                                                       |
+| 25   | Nick Kovalsky               | [Build Cross-Platform Games in .NET MAUI with DrawnUI](https://taublast.github.io/posts/Breakout/)                                                                                                        |
+| 26   | Johan Smarius               | [Exploring the Syncfusion .NET MAUI Toolkit](https://www.youtube.com/watch?v=T69XFmhjdzQ)                                                                                                                 |
+| 27   | Steven Thewissen            | [The Crosswind Experiment](https://thewissen.io/maui-ui-july-crosswind-experiment/)                                                                                                                       |
+| 28   | Gulam Ali H.                | [Coach Marks, but Beautiful in .NET MAUI](https://medium.com/@freakyali/coach-marks-but-beautiful-in-net-maui-7cd861dc1058)                                                                               |
+| 29   | Ed Gomez                    | [Why your .NET MAUI App Should Absolutely Support Desktop](https://www.linkedin.com/pulse/why-your-net-maui-app-should-absolutely-support-desktop-ed-gomez-jaekf)                                         |
+| 30   | David Ortinau               | [My top 5 UI Moments of 2025 (So Far)](https://dev.to/davidortinau/my-top-5-ui-moments-of-2025-so-far-1h14)                                                                                               |
+| 31   | Roman Jasek                 | [Accessibility in .NET MAUI - Chapter 1 - Introduction & Motivation](https://www.riganti.cz/en/blog/maui-managing-accessibility-chapter-01) (note remaining chapters are online and linked from the post) |
 
 {: .goldie-table }
 
